--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -9,9 +9,6 @@ set clipboard+=ideaput
 nnoremap \e :e ~/.ideavimrc<CR>
 nnoremap \r :action IdeaVim.ReloadVimRc.reload<CR>
 
-""" The Escape button
-map <C-c> <Esc>
-
 """ The Leader Key
 let mapleader=" "
 
@@ -28,7 +25,7 @@ nnoremap <c--> :action SplitHorizontally<CR>
 nnoremap <c-=> :action Unsplit<CR>
 nnoremap <c-m> :action MoveEditorToOppositeTabGroup<CR>
 
-sethandler <c-j> a:vim
+"sethandler <c-j> a:vim
 sethandler <c-k> a:vim
 nnoremap <c-h> <c-w>h
 nnoremap <c-l> <c-w>l
@@ -65,7 +62,7 @@ nnoremap <leader>r :action Refactorings.QuickListPopupAction<CR>
 nnoremap <Leader>=  :action ReformatCode<CR>
 nnoremap <leader>o :action OptimizeImports<CR>
 
-nnoremap <c-r> :action RecentFiles<CR>
+"nnoremap <c-r> :action RecentFiles<CR>
 nnoremap <leader>l :action RecentLocations<CR>
 nnoremap <leader>h  :action LocalHistory.ShowHistory<CR>
 
@@ -91,7 +88,7 @@ nnoremap gc :action GotoClass<CR>
 nnoremap gi :action GotoImplementation<CR>
 nnoremap gd :action GotToDeclaration<CR>
 nnoremap gp :action GotToSuperMethod<CR>
-nnoremap gt :action GotoTest<CR>
+"nnoremap gt :action GotoTest<CR>
 nnoremap gb :action Back<CR>
 nnoremap gf :action Forward<CR>
 
