added some qutebrowser permissions

--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -8,6 +8,17 @@ config_version: 2
 settings:
   content.javascript.clipboard:
     global: access
+  content.notifications.enabled:
+    https://app.slack.com: true
+    https://calendar.google.com: true
+    https://mail.proton.me: true
+    https://teams.microsoft.com: true
+  content.register_protocol_handler:
+    https://calendar.google.com?cid=%25s: false
+    https://mail.google.com?extsrc=mailto&url=%25s: false
+    https://mail.proton.me#mailto=%25s: false
+    https://outlook.office.com?mailtouri=%25s: false
+    https://outlook.office365.com?mailtouri=%25s: false
   fonts.default_size:
     global: 11pt
   qt.highdpi:
